# qrt

./: -ta-classic && uv run python -c "  .gitignore  .nojekyll  404.html  LICENSE  Makefile  README.md  ROADMAP.md  data.html  demo-requirements.yml  demo.env  demo.html  demo.py  feat.html  index.html  migration.md  mkdocs.yml  objects.inv  plot.html  pyproject.toml  roadmap.html  robots.txt  search.json  sitemap.xml  stats.html
.temp/alphaeval-main/: .gitignore  README.md  pyproject.toml
.temp/alphaeval-main/alphaeval/: __init__.py  _evaluate.py  forward_returns.py  matrix.py  metrics.py  plots.py  report.py  tail_risk.py  time_decay.py
.temp/alphaeval-main/demo/: data_convert.ipynb  demo.ipynb
.temp/alphaeval-main/tests/: test_forward_returns.py  test_matrix.py  test_metrics.py  test_report.py  test_tail_risk.py  test_time_decay.py
ai/: index.html  roadmap.html
api/dataload/: index.html
api/feat/: index.html
api/plot/: index.html
api/utils/: index.html
bt/: index.html  roadmap.html
calendar/: index.html  roadmap.html
cross_section/: index.html  roadmap.html
data/: datasets.html  index.html  local.html  roadmap.html  schemas.html  sources.html
dataset/: index.html  roadmap.html  splitting.html  temporal_split.html  time_series_split.html
docs/: .gitignore  _quarto.yml  conf.py  data.ipynb  demo.ipynb  demo.qmd  docstring_parser.py  feat.ipynb  feat.md  feat.qmd  index.ipynb  index.md  index.qmd  plot.ipynb  roadmap.qmd  stats.ipynb
env/: index.html  roadmap.html  roadmap.qmd
examples/: plot_tutorial.ipynb
experiment/: index.html  roadmap.html
factor/: index.html  roadmap.html
feat/: index.html  pandas_ta.html  qta.html  talib.html
feature/: cross_sectional.html  datetime.html  encode.html  impute.html  index.html  outlier.html  pandas_ta.html  pipeline.html  qta.html  reduction.html  roadmap.html  scale.html  selection.html  talib.html  text.html  timeseries.html  transform.html  transforms.html
indicator/: index.html  pandas_ta.html  roadmap.html  talib.html
label/: average_uniqueness.html  class_balance_weights.html  combine_weights.html  concurrency.html  cusum_filter.html  fixed_horizon.html  index.html  indicator_matrix.html  meta_label.html  prune_labels.html  purging_metadata.html  roadmap.html  sample_weights.html  sequential_bootstrap.html  time_decay.html  trend_scanning.html  triple_barrier.html  vertical_barriers.html
model/: index.html  roadmap.html
nbs/: 00_utils.ipynb  01_dataload.ipynb  02_splits.ipynb  03_bt.ipynb  04_data.ipynb  05_models.ipynb  06_portfolio.ipynb  07_init.ipynb  _quarto.yml  index.ipynb  nbdev.yml  sidebar.yml
plot/: classification.html  index.html  report.html  returns.html  roadmap.html  saving.html  trades.html
portfolio/: index.html  roadmap.html
preprocess/: encode.html  impute.html  index.html  outlier.html  reduction.html  roadmap.html  scale.html  selection.html
qrt/: __init__.py  _optional.py  data.py  dataload.py  feat.py  portfolio.py  splits.py  tearsheet.py  utils.py
ray/: index.html  train.html
reference/: ai.agents.html  ai.batch.html  ai.client.html  ai.embeddings.html  ai.evals.html  ai.finetune.html  ai.html  ai.local.html  ai.prompts.html  ai.rag.html  ai.serve.html  ai.tokenize.html  ai.tools.html  ai.types.html  ai.vector.html  calendar.html  cross_section.html  data.clean.html  data.datasets.html  data.html  data.local.html  data.sources.binance.html  data.sources.duckdb.html  data.sources.html  data.sources.yfinance.html  dataload.html  dataset.html  env.html  experiment.html  factor.html  feat.html  feat.pandas_ta.html  feat.qta.html  feat.talib.html  feature.cross_sectional.html  feature.datetime.html  feature.encode.html  feature.html  feature.impute.html  feature.ops.html  (+45 more)
risk/: index.html  roadmap.html
search/: search_index.json
signal/: index.html  roadmap.html
stats/: chained.html  factors.html  index.html  performance.html  risk.html  roadmap.html  rolling.html
tests/: test_ai_batch.py  test_ai_core.py  test_ai_knowledge.py  test_ai_litellm.py  test_ai_operations.py  test_ai_workflows.py  test_classification_plots.py  test_correlation_plots.py  test_cross_section_elo.py  test_cross_section_group_weighted_return.py  test_cross_section_transforms.py  test_data_clean.py  test_dataset.py  test_env.py  test_experiment.py  test_factor_elo.py  test_feature_lifecycle.py  test_feature_namespaces.py  test_gym.py  test_indicator_features.py  test_indicator_spikes.py  test_label_barriers.py  test_label_events.py  test_label_outcomes.py  test_label_plots.py  test_label_trend.py  test_label_weights.py  test_model_selection.py  test_namespaces.py  test_qrt.py  test_risk.py  test_transform_pipeline.py
tools/: docs_freeze.py  gen_demo_strategies.py  gen_feature_stubs.py  update_datasets.py
transform/: encode.html  impute.html  index.html  outlier.html  reduction.html  roadmap.html  scale.html  selection.html
utils/: index.html  roadmap.html
(+327 files in other folders)
