[project]
name = "pyqrt"
version = "0.0.5"
description = "Quant Research Tools"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "Iman Karimi" }]
dependencies = [
    "duckdb>=1.5.4",
    "ipykernel>=7.3.0",
    "kaleido>=1.0",
    "nbformat>=5.10",
    "pandas>=3.0",
    "pandas-ta-classic>=0.6.52",
    "plotly>=6.0",
    "pyarrow>=17.0",
    "requests>=2.32",
    "ta-lib>=0.7.0",
    "torch>=2.13.0",
    "tqdm>=4.68.4",
    "yfinance>=1.5.1",
]

[project.urls]
documentation = "https://quantbert.github.io/qrt/"
repository = "https://github.com/quantbert/qrt"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
docs = [
    "ipykernel>=7.3.0",
    "nbclient>=0.11.0",
    "quartodoc>=0.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qrt"]
