[project]
name = "pyqrt"
version = "0.0.10"
description = "Quant Research Tools"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "Iman Karimi" }]
dependencies = [
    "duckdb>=1.5.4",
    "ipykernel>=7.3.0",
    "joblib>=1.5.3",
    "kaleido>=1.0",
    "nbformat>=5.10",
    "pandas>=3.0",
    "pandas-ta-classic>=0.6.52",
    "platformdirs>=4.10.0",
    "plotly>=6.0",
    "pyarrow>=17.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32",
    "rich>=15.0.0",
    "scipy>=1.18.0",
    "ta-lib>=0.7.0",
    "tenacity>=9.1.4",
    "torch>=2.13.0",
    "torchinfo>=1.8.0",
    "tqdm>=4.68.4",
    "yfinance>=1.5.1",
]

[project.urls]
documentation = "https://quantbert.github.io/qrt/"
repository = "https://github.com/quantbert/qrt"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
docs = [
    "ipykernel>=7.3.0",
    "nbconvert>=7.17.1",
    "quartodoc>=0.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qrt"]
