[project]
name = "pyqrt"
version = "0.0.22"
description = "Quant Research Tools"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "Iman Karimi" }]
dependencies = [
    "duckdb>=1.5.4",
    "exchange-calendars>=4.13.2",
    "gymnasium>=1.2",
    "ipykernel>=7.3.0",
    "joblib>=1.5.3",
    "kaleido>=1.0",
    "nbformat>=5.10",
    "pandas>=3.0",
    "platformdirs>=4.10.0",
    "plotly>=6.0",
    "pyarrow>=18.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "ray[data,rllib,serve,train,tune]>=2.56.1",
    "requests>=2.32",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "tenacity>=9.1.4",
    "tqdm>=4.68.4",
    "yfinance>=1.5.1",
]

[project.optional-dependencies]
indicators = [
    "pandas-ta-classic>=0.6.52",
    "ta-lib>=0.7.0",
]
torch = [
    "torch>=2.13.0",
    "torchinfo>=1.8.0",
]
ai = [
    "lancedb>=0.34.0",
    "litellm>=1.93.0",
    "llama-index-core>=0.14.23",
    "pydantic>=2.13",
    "pydantic-ai>=2.17.0",
    "pydantic-evals>=2.17.0",
]
ai-local = [
    "outlines>=1.3.2",
    "peft>=0.19.1",
    "sentence-transformers>=5.6.1",
    "transformers>=5.14.1",
    "trl>=1.9.0",
]
ai-document = [
    "docling>=2.99.0",
]
ai-all = [
    "docling>=2.99.0",
    "lancedb>=0.34.0",
    "litellm>=1.93.0",
    "llama-index-core>=0.14.23",
    "outlines>=1.3.2",
    "peft>=0.19.1",
    "pydantic>=2.13",
    "pydantic-ai>=2.17.0",
    "pydantic-evals>=2.17.0",
    "sentence-transformers>=5.6.1",
    "transformers>=5.14.1",
    "trl>=1.9.0",
]
experiment = [
    "mlflow-skinny>=3",
]

[project.urls]
documentation = "https://quantbert.github.io/qrt/"
repository = "https://github.com/quantbert/qrt"

[dependency-groups]
dev = [
    "pandas-ta-classic>=0.6.52",
    "pytest>=8.0",
    "ta-lib>=0.7.0",
    "torch>=2.13.0",
    "torchinfo>=1.8.0",
]
docs = [
    "ipykernel>=7.3.0",
    "nbconvert>=7.17.1",
    "pandas-ta-classic>=0.6.52",
    "quartodoc>=0.11.1",
    "ta-lib>=0.7.0",
    "torch>=2.13.0",
    "torchinfo>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qrt"]
