[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphaeval"
version = "0.1.0"
description = "Finance-aware model evaluation: return-weighted confusion matrix for Buy/Hold/Sell predictions"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "ipykernel>=7.2.0",
    "duckdb>=1.5.1",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[tool.setuptools.packages.find]
include = ["alphaeval*"]
